change everything to my project and not reveal.js

--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -17,6 +17,9 @@ html * {
   color-profile: sRGB;
   rendering-intent: auto; }
 
+.reveal .hero {
+  font-size: 400px; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
