--- a/css/theme/source/moon.scss
+++ b/css/theme/source/moon.scss
@@ -7,6 +7,7 @@
 // Default mixins and settings -----------------
 @import "../template/mixins";
 @import "../template/settings";
+@import "icons";
 // ---------------------------------------------
 
 
