--- a/css/theme/source/moon.scss
+++ b/css/theme/source/moon.scss
@@ -74,6 +74,29 @@ $selectionBackgroundColor: $magenta;
     box-shadow: none;
     margin: 0;
   }
+
+  .lower {
+    text-transform: none;
+  }
+
+  .thanks {
+    font-size: 200px;
+  }
+
+  .contact {
+    font-size: 55px;
+  }
+
+  .slides-at {
+    font-size: 30px;
+  }
+
+  .hiring {
+    font-size: 50px;
+  }
+
+  .questions {
+  }
 }
 
 
